edit-semester working

--- a/views/pages/semester/semester-view.ejs
+++ b/views/pages/semester/semester-view.ejs
@@ -45,7 +45,7 @@
                     { %>
                     <tr>
                       <td>
-                        <a href="/lessons/edit-semester/<%- semester.id %>">
+                        <a href="/semesters/edit-semester/<%- semester.id %>">
                           <img class="img-profile rounded-circle custom-img"
                           src="../img/semester-images/<%- semester.semesterPic %>">
                         </a>
