--- a/views/pages/semester/edit-semester.ejs
+++ b/views/pages/semester/edit-semester.ejs
@@ -25,6 +25,7 @@
                       <input
                         type="text"
                         name="title"
+                        value="<%- semester.title %>"
                         class="form-control form-control-user"
                         id="categoryTitle"
                         aria-describedby="categoryTitle"
@@ -40,6 +41,7 @@
                         name="shortDescription"
                         class="form-control form-control-user"
                         id="categoryPic"
+                        value="<%- semester.shortDescription %>"
                         placeholder="Short Decription"
                       />
                     </div>
@@ -53,31 +55,54 @@
                         <select name="categoryId" class="form-control">
                         <option>choose below</option>
                         <% categoriesList.forEach(category => { %>
-                        <option value="<%-category.id %>">
+                        <option value="<%-category.id %>" <%= category.id ===semester.id ? 'selected': "" %>>
                           <%- category.title %>
                         </option>
                         <%})%>
                       </select>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <label for="semesterPic" style="display: block"
-                      >Semester pic</label
-                    >
-                    <input
-                      type="file"
-                      name="semesterPic"
-                      id="semesterPic"
-                      placeholder=""
-                    />
+                  
+                </div>
+                <div class="row mb-3">
+                  <div class="col-md-12">
+                    <div class="image-display-section">
+                      <i
+                        class="fas fa-window-close close-icon"
+                        onclick="showFileSection()"
+                      ></i>
+                      <img
+                        class="category-image"
+                        alt="Image placeholder"
+                        src="/img/semester-images/<%- semester.semesterPic %>"
+                      />
+                    </div>
+                    <div class="file-section-container">
+                      <div style="width: 100%">
+                        <label for="semesterPic" style="display: block"
+                          >Semester pic</label
+                        >
+                        <input
+                          type="file"
+                          name="semesterPic"
+                          id="semesterPic"
+                          placeholder=""
+                        />
+                        <i
+                          class="fas fa-window-close close-icon"
+                          onclick="showImageSection()"
+                        ></i>
+                      </div>
+                    </div>
+                    
                   </div>
                 </div>
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="editSemester()"
+                  onclick="editSemester('<%- semester.id %>')"
                 >
-                  Create Semester
+                  Update Semester
                 </button>
                 <hr />
               </form>
@@ -103,21 +128,21 @@
   <!-- End of Page Wrapper -->
 
   <script>
-    const editSemester = () => {
+    const editSemester = (semesterId) => {
       const formElement = document.querySelector("#semesterForm");
       const formData = new FormData(formElement);
-      postSemesterData(formData).then(async (response) => {
+      postSemesterData(formData,semesterId).then(async (response) => {
         if (response.status === 200) {
           window.location.href = "/semesters";
         }
       });
     };
 
-    const postSemesterData = async (semesterData) => {
+    const postSemesterData = async (semesterData,semesterId) => {
       const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
 
-      const response = await fetch("/api/v1/semester/create-semester", {
-        method: "POST",
+      const response = await fetch(`/api/v1/semester/edit-semester/${semesterId}`, {
+        method: "PUT",
         headers: {
           Authorization: `Bearer ${accessToken}`,
         },
