--- a/views/pages/subject/edit-subject.ejs
+++ b/views/pages/subject/edit-subject.ejs
@@ -48,7 +48,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="semester">To which semester does it belong to? </label>
-                        <select name="semester" class="form-control">
+                        <select name="semesterId" class="form-control">
                         <option>choose below</option>
                         <% semestersList.forEach(semester => { %>
                         <option value="<%-semester.id %>">
@@ -73,7 +73,7 @@
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="editSubject()"
+                  onclick="editSubject('<%- %>')"
                 >
                   Create Subject
                 </button>
@@ -101,20 +101,20 @@
   <!-- End of Page Wrapper -->
 
   <script>
-    const editSubject = () => {
+    const editSubject = (subjectId) => {
       const formElement = document.querySelector("#subjectForm");
       const formData = new FormData(formElement);
-      postSubjectData(formData).then(async (response) => {
+      postSubjectData(formData,subjectId).then(async (response) => {
         if (response.status === 200) {
           window.location.href = "/subjects";
         }
       });
     };
 
-    const postSubjectData = async (categoryData) => {
+    const postSubjectData = async (categoryData,subjectId) => {
       const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
 
-      const response = await fetch("/api/v1/subject/create-subject", {
+      const response = await fetch(`/api/v1/subject/edit-subject/${subjectId}`, {
         method: "POST",
         headers: {
           Authorization: `Bearer ${accessToken}`,
