--- a/views/pages/subject/subject-view.ejs
+++ b/views/pages/subject/subject-view.ejs
@@ -44,8 +44,14 @@
                     <% if(subjectsList.length > 0) { %> <% subjectsList.forEach(subject =>
                     { %>
                     <tr>
-                      <td><img class="img-profile rounded-circle custom-img"
-                        src="../img/subject-images/<%- subject.subjectPic %>"></td>
+
+                      <td>
+                        <a href="/subjects/edit-subject/<%- subject.id %>">
+                          <img class="img-profile rounded-circle custom-img"
+                          src="../img/subject-images/<%- subject.subjectPic %>">
+                        </a>
+                        
+                      </td>
                       <td><%- subject.title %></td>
                       <td><%- subject.createdAt.toLocaleDateString() %></td>
                       <td><%- subject.shortDescription %></td>
