working on delete category

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,3 +56,12 @@ input[type="file"]::file-selector-button:active {
   display: none;
   width: 100%;
 }
+
+
+.danger {
+  color: red;
+}
+
+.btn-danger {
+  background-color: red;
+}
