--- a/views/partials/modal-view.ejs
+++ b/views/partials/modal-view.ejs
@@ -3,15 +3,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModal">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="deleteModal">Delete the data</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">Are you sure you want to delete the selected data.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <button class="btn btn-primary danger" onclick="window.deleteItem()" >Delete</button>
+                    <button class="btn btn-primary btn-danger" onclick="window.deleteItem()" >Delete</button>
                 </div>
             </div>
         </div>
