delete modal added in semester view

--- a/views/pages/semester/semester-view.ejs
+++ b/views/pages/semester/semester-view.ejs
@@ -91,7 +91,8 @@
     <!-- End of Content Wrapper -->
   </div>
   <!-- End of Page Wrapper -->
-
+  
+  <%- include ("../../partials/modal-view") %>
 
   <script>
     window.deleteItem = () => {
