--- a/views/pages/subject/subject-view.ejs
+++ b/views/pages/subject/subject-view.ejs
@@ -38,6 +38,7 @@
                       <th>Title</th>
                       <th>Created On</th>
                       <th>Short Description</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -55,6 +56,17 @@
                       <td><%- subject.title %></td>
                       <td><%- subject.createdAt.toLocaleDateString() %></td>
                       <td><%- subject.shortDescription %></td>
+                      <td>
+                        <a
+                          onclick="setDataId('subjectId','<%-subject.id %>')"
+                          class="dropdown-item"
+                          href="#"
+                          data-toggle="modal"
+                          data-target="#deleteModal"
+                        >
+                          <i class="fas fa-trash"></i>
+                        </a>
+                      </td>
                     </tr>
                     <%})%> <% } %>
                   </tbody>
@@ -80,4 +92,36 @@
     <!-- End of Content Wrapper -->
   </div>
   <!-- End of Page Wrapper -->
+
+  <%- include ("../../partials/modal-view") %>
+
+
+  <script>
+    window.deleteItem = () => {
+      const subjectId = window.subjectId;
+      deleteLessonData(subjectId).then(async (response) => {
+        if (response.status === 200) {
+          window.subjectId = null;
+          window.deleteItem = null;
+          window.location.href = "/lessons";
+        }
+      });
+    };
+
+    const deleteLessonData = async (subjectId) => {
+      const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
+      
+      const response = await fetch(
+        `/api/v1/subject/delete-subject/${subjectId}`,
+        {
+          method: "DELETE",
+          headers: {
+            Authorization: `Bearer ${accessToken}`,
+          },
+        }
+      );
+      return response;
+    };
+  </script>
+
 </body>
