--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -93,11 +93,11 @@
         class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
         aria-labelledby="userDropdown"
       >
-        <a class="dropdown-item" href="#">
+        <!-- <a class="dropdown-item" href="#">
           <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
           Profile
-        </a>
-        <div class="dropdown-divider"></div>
+        </a> -->
+        <!-- <div class="dropdown-divider"></div> -->
         <a
           class="dropdown-item"
           href="#"
