check the categry image

--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -34,7 +34,7 @@
                 >
                   <thead>
                     <tr>
-                      <th>Categorysdcsdcsdcsdc Pic</th>
+                      <th>Category Pic</th>
                       <th>Title</th>
                       <th>Created On</th>
                       <th>Short Description</th>
@@ -49,7 +49,7 @@
                         <a href="/categories/edit-category/<%- category.id %>">
                           <img
                             class="img-profile rounded-circle custom-img"
-                            src="/img/1706351592317-722278196-download.jpeg"
+                            src="/img/category-images/<%- category.categoryPic %>"
                           />
                         </a>
                       </td>
