check the categry image

--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -34,7 +34,7 @@
                 >
                   <thead>
                     <tr>
-                      <th>Category Pic</th>
+                      <th>Categorfgbfgy Pic</th>
                       <th>Title</th>
                       <th>Created On</th>
                       <th>Short Description</th>
