--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
 
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/test/style.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
