check the categry image

--- a/views/pages/category/category-view.ejs
+++ b/views/pages/category/category-view.ejs
@@ -49,7 +49,7 @@
                         <a href="/categories/edit-category/<%- category.id %>">
                           <img
                             class="img-profile rounded-circle custom-img"
-                            src="/img/category-images/<%- category.categoryPic %>"
+                            src="/img/<%- category.categoryPic %>"
                           />
                         </a>
                       </td>
