--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
     <title>Education Organiser APP</title>
     <!-- Custom fonts for this template-->
     <link
-      href="/vendor/fontawesome-free/css/all.min.css"
+      href="/static/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -24,8 +24,8 @@
     />
 
     <!-- Custom styles for this template-->
-    <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
-    <link href="/css/test/style.css" rel="stylesheet" />
+    <link href="/static/css/sb-admin-2.min.css" rel="stylesheet" />
+    <link href="/static/css/test/style.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -35,22 +35,22 @@
   <%- body %>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/vendor/jquery/jquery.min.js"></script>
+  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="/js/sb-admin-2.min.js"></script>
+  <script src="/static/js/sb-admin-2.min.js"></script>
 
   
 
 
   <!-- Page level plugins -->
-  <script src="/vendor/datatables/jquery.dataTables.min.js"></script>
-  <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+  <script src="/static/vendor/datatables/jquery.dataTables.min.js"></script>
+  <script src="/static/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- App level plugins -->
-  <script src="/js/app.js"></script>
+  <script src="/static/js/app.js"></script>
 </html>
