--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -86,7 +86,7 @@
           class="mr-2 d-none d-lg-inline text-gray-600 small"
           id="userFullName"
         ></span>
-        <img class="img-profile rounded-circle" src="/img/undraw_profile.svg" />
+        <img class="img-profile rounded-circle" src="static/img/undraw_profile.svg" />
       </a>
       <!-- Dropdown - User Information -->
       <div
