--- a/views/pages/category/edit-category.ejs
+++ b/views/pages/category/edit-category.ejs
@@ -57,7 +57,7 @@
                       <img
                         class="category-image"
                         alt="Image placeholder"
-                        src="/img/category-images/<%- category.categoryPic %>"
+                        src="/dynamic/category-images/<%- category.categoryPic %>"
                       />
                     </div>
                     <div class="file-section-container">
