new code updated for the views

--- a/views/pages/lesson/edit-lesson.ejs
+++ b/views/pages/lesson/edit-lesson.ejs
@@ -74,7 +74,7 @@
                       <img
                         class="category-image"
                         alt="Image placeholder"
-                        src="/img/lesson-images/<%- lesson.lessonPic %>"
+                        src="/dynamic/lesson-images/<%- lesson.lessonPic %>"
                       />
                     </div>
                     <div class="file-section-container">
