--- a/views/pages/lesson/lesson-view.ejs
+++ b/views/pages/lesson/lesson-view.ejs
@@ -48,7 +48,7 @@
                         <a href="/lessons/edit-lesson/<%- lesson.id %>">
                           <img
                             class="img-profile rounded-circle custom-img"
-                            src="../img/lesson-images/<%- lesson.lessonPic %>"
+                            src="/dynamic/lesson-images/<%- lesson.lessonPic %>"
                           />
                         </a>
                       </td>
