--- a/views/pages/semester/semester-view.ejs
+++ b/views/pages/semester/semester-view.ejs
@@ -48,7 +48,7 @@
                       <td>
                         <a href="/semesters/edit-semester/<%- semester.id %>">
                           <img class="img-profile rounded-circle custom-img"
-                          src="../img/semester-images/<%- semester.semesterPic %>">
+                          src="/dynamic/semester-images/<%- semester.semesterPic %>">
                         </a>
                         
                       </td>
