--- a/views/pages/subject/edit-subject.ejs
+++ b/views/pages/subject/edit-subject.ejs
@@ -72,7 +72,7 @@
                       <img
                         class="category-image"
                         alt="Image placeholder"
-                        src="/img/subject-images/<%- subject.subjectPic %>"
+                        src="/dynamic/subject-images/<%- subject.subjectPic %>"
                       />
                     </div>
                     <div class="file-section-container">
