--- a/views/pages/subject/subject-view.ejs
+++ b/views/pages/subject/subject-view.ejs
@@ -49,7 +49,7 @@
                       <td>
                         <a href="/subjects/edit-subject/<%- subject.id %>">
                           <img class="img-profile rounded-circle custom-img"
-                          src="../img/subject-images/<%- subject.subjectPic %>">
+                          src="/dynamic/subject-images/<%- subject.subjectPic %>">
                         </a>
                         
                       </td>
