--- a/views/pages/semester/edit-semester.ejs
+++ b/views/pages/semester/edit-semester.ejs
@@ -74,7 +74,7 @@
                       <img
                         class="category-image"
                         alt="Image placeholder"
-                        src="/img/semester-images/<%- semester.semesterPic %>"
+                        src="/dynamic/semester-images/<%- semester.semesterPic %>"
                       />
                     </div>
                     <div class="file-section-container">
